# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.411 2013/12/16 15:17:56 keri Exp $

  16 Dec 2013; <keri@gentoo.org> -swi-prolog-7.1.0.ebuild,
  -swi-prolog-7.1.1.ebuild:
  Remove old -7.1 development versions

*swi-prolog-7.1.3 (16 Dec 2013)

  16 Dec 2013; <keri@gentoo.org> +swi-prolog-7.1.3.ebuild:
  Bump -7.1 development version

*swi-prolog-6.6.1 (16 Dec 2013)

  16 Dec 2013; <keri@gentoo.org> +swi-prolog-6.6.1.ebuild:
  Version bump

  16 Dec 2013; <keri@gentoo.org> -swi-prolog-6.5.2.ebuild:
  Remove old development version

*swi-prolog-7.1.2 (10 Dec 2013)

  10 Dec 2013; <keri@gentoo.org> +swi-prolog-7.1.2.ebuild:
  Bump -7.1 development version

*swi-prolog-7.1.1 (05 Dec 2013)

  05 Dec 2013; <keri@gentoo.org> +swi-prolog-7.1.1.ebuild:
  Bump -7.1 development version

  25 Nov 2013; Chema Alonso <nimiux@gentoo.org> swi-prolog-6.4.1.ebuild:
  Stable for amd64 wrt bug #490154

*swi-prolog-7.1.0 (22 Nov 2013)

  22 Nov 2013; <keri@gentoo.org> +swi-prolog-7.1.0.ebuild:
  Add new -7.1 development version

*swi-prolog-6.6.0 (22 Nov 2013)

  22 Nov 2013; <keri@gentoo.org> +swi-prolog-6.6.0.ebuild:
  Version bump

  22 Nov 2013; <keri@gentoo.org> -swi-prolog-6.5.0.ebuild,
  -swi-prolog-6.5.1.ebuild:
  Remove old development versions

*swi-prolog-6.5.3 (22 Nov 2013)

  22 Nov 2013; <keri@gentoo.org> +swi-prolog-6.5.3.ebuild:
  Bump -6.5 development version

*swi-prolog-6.5.2 (22 Aug 2013)

  22 Aug 2013; <keri@gentoo.org> +swi-prolog-6.5.2.ebuild:
  Bump -6.5 development version

  13 Aug 2013; <keri@gentoo.org> -swi-prolog-6.3.18.ebuild,
  -swi-prolog-6.3.19.ebuild:
  Remove old -6.3 development versions

*swi-prolog-6.5.1 (13 Aug 2013)

  13 Aug 2013; <keri@gentoo.org> +swi-prolog-6.5.1.ebuild:
  Bump -6.5 development version

*swi-prolog-6.5.0 (30 Jul 2013)

  30 Jul 2013; <keri@gentoo.org> +swi-prolog-6.5.0.ebuild: