@@ -9,6 +9,7 @@ DIST pl-6.6.0.tar.gz 14764935 SHA256 b85ac27a8afeb29640fe2b98c088e5f9c753adacb20
 DIST pl-6.6.1.tar.gz 14769033 SHA256 c8bf201dc28705969e509a378661534ab4b87e1f4ab598ee01293409cc3f6b0c SHA512 c6ee8862db59337a986f97aaaffe2c72665c5e18a352d9f270af64f4c7e063616b47bb79b29319fe33fb6b0015b8dc97d49dd2b5bfa458ada877abc0bef92f7e WHIRLPOOL c450d83be2266ea6482176f249ead038027dccbfd140a7900f1bc4035580230d8b544027679e3cb3e0c0fa6fef9398f781beceffd860b94ae1ef2ea489828ddc
 DIST pl-7.1.2.tar.gz 14939379 SHA256 ce148880bf6dd6ce9735869e234d6666d5005d4d2756ed55712973c4fa347150 SHA512 a79be11fc105623d4e12923b170680ce1d8b493dc4f4e25c02c75c707981c25c4d328258ac40a36cfb878e4bd88bec8683eb08acaf11fcea04158e080ad6a8b3 WHIRLPOOL 7c592b8d089e2c3c30511bce8273c57883c01b4b88d84e4fc819b79d6f18834f7b41195825517d6a425bc3894d766b9340639ddb73d5aacb89ec57ef268d053c
 DIST pl-7.1.3.tar.gz 14939832 SHA256 a410837e1d5c2835a528ba516427d238c5106c633309c81105b1f8ffbd5c36f8 SHA512 f18245cabc6a17eb14d608bbd347c5fcded6c4298f3f10c0686875e78d690a45e2768f9e0e97607f2cd40871940da5420cfe122125706a57de66a62cbbdbb134 WHIRLPOOL 9ec4e82e558a095620d32b9d6a782a2abda5571106d65c661c20fb5cf10756ed1f6bd78baeb68202d204619cfc280468aed91637781389a5093fe315138cf253
+DIST pl-7.1.4.tar.gz 14946912 SHA256 64de7742f2def4ff211f9d442bfc997741a27b7b26dee80d23e0ba45e438a5f0 SHA512 dbeb4968f680fd86ac22f7a028c64a613fbd0c67b32373e9c8b82642dbf370f7ffe6ddce767fba65f1cf69d743e52116d67717d7c0b65479dee47d32106d0b6d WHIRLPOOL 6fd2847f2130f8b842f5db5cab67761efea1259ad67ae8a3cc8960c50ce4628c57c141322d1389d6eaa96a6e98a4e3ba6ff04d3fdeb44978159b596053302175
 DIST swi-prolog-6.2.6-gentoo-patchset-1.tar.gz 2978 SHA256 eeadd8b3a518aa1378cadc8bb58ff906a84a07b286f460cb0863ac57606d5a36 SHA512 5dbcc2969bbb6def055ae3dceb4bf1a78a862963dc40d34c2028a88021bb4b3eb1426cd042ff723414eee9d1ebe1083b381176720e6948ed49c107b5da7b3d01 WHIRLPOOL 6ec46782ffa2973a8fb3660dfdad7dd98d7e1bdd033a34132cb503dd6e3c9d0d09b551d03e42db09b0d83714fe988582bb18f674366863c7c85999df90aef63c
 DIST swi-prolog-6.4.0-gentoo-patchset-0.tar.gz 1596 SHA256 7d6d3b52fd054a5d7a593aff408a350a5e1405ccd0e69075dbc5d9f663baaf9b SHA512 6c8ee954f8ba80cb931be08af768fbd05635bd93d765b73ecbaa6ddc37e2290965459f43a385b8246850b64276f2a79249bd389cb390d2637c993934d6c47f2f WHIRLPOOL 9d1e958e30005f3c596140b3e663e917ac4ff5d442b65293f5027c72e5d07f4e71285c64cc8e4a7c1859f335ee0f73cf0af7b5b4c0faacc88cb250d8c323b276
 DIST swi-prolog-6.4.1-gentoo-patchset-0.tar.gz 1593 SHA256 c57b19f6d6f31855db9f6c5c14edb7a20b30ed4b9cfde805bf95182c7dda6565 SHA512 7be7f1bd3a10bb6a436b3f679210aa48de5774c728a4f12de69983458200095b5fe377aa30429566ec5e91c4ea172cc3d4bdfb6486731ed47d045dfa40afacfc WHIRLPOOL e3a135438947eedb71070d3df903c65aefd94c1c1b724f94df396ed0b1e354882c83e6a938816ba64df45b639b00a8cff9c591405f44a472eea4578ab95f232d
@@ -17,6 +18,7 @@ DIST swi-prolog-6.6.0-gentoo-patchset-0.tar.gz 1588 SHA256 4931ffc29db2ac2a528bd
 DIST swi-prolog-6.6.1-gentoo-patchset-0.tar.gz 1596 SHA256 2f716888165c6dc9e304e94fe1be4949d6da9ce0eec9e06202a6049fb178f385 SHA512 1aaceaa6bd8ca2663b22a720654ffab143d6de1b0ef51e924f55e9eb729b4d356302daa7f2fbcf36fd9cc208638dae16c2a2d2dbd9db1b56c955f5a5a6e129cd WHIRLPOOL eb0fee31b2d8c6e62fd481427dbe06947c4b1a6b39bbb5a0c705164f386ff1e849e6ae3a147bc62da2b5962ba039d29d3b56b2d6cdc8d7b63213c1dfe1a423b3
 DIST swi-prolog-7.1.2-gentoo-patchset-0.tar.gz 1592 SHA256 6fd2f75469d1e7a16f9ebdb8c918fc8c9b2ebce17272ff83dd2c99a0e5fc5035 SHA512 164e4e96fa0bd38299c1e7822e2be40ed4051ef636d8d29f3079232eff79a4eff982db9910445b50190ae2bf9e28baad2e57341257441885dd076e57d2554777 WHIRLPOOL 0c3c05520478e02b7a997d9a8843cdfa21debacb52e04e3a7f831076021b0f486d8d2725c51f1eb1a6765eb5fdacae1d2eef4673c2b70a7d598d33198e3f505b
 DIST swi-prolog-7.1.3-gentoo-patchset-0.tar.gz 1593 SHA256 798ccf79dc0c7cd6fb29ba07b0ac638a8ba0df4f6c59d9fb02d68912396887ea SHA512 7591c17667eff1c648e89619c543a06bd6c06fafbc97e37dfa8bf7729555db6a0d143b9a9628c9fb30af2edea31488b7e854e5c86fcb3a37a2092c3cfab68d92 WHIRLPOOL e83da451ce963f92d580e0c1e39a136113af9494e79fdb941343c1b60e17b2c4bdd9b22d7409160db7088bd02ddc692731d79bf8527c72137d4a9deabf8da2eb
+DIST swi-prolog-7.1.4-gentoo-patchset-0.tar.gz 1604 SHA256 6ddda9b09bf39d395e7b165603cebdc13ea953986a96ec20184d3683f53d89e5 SHA512 23ded752c663136fba776151050a51a9933f737635d653319aec9f228a549121c7dca8c1bc0f7df3a9c4740e3cc70d564d583d9d162c396795ffbf5aa27640ba WHIRLPOOL 539fd1b1acbca728d8aa6311fe68d46dfffebb69447b68667121429667eee5223d2e3ad56ffdf71df5cfba2f9309b539938c28ea34f1a4e03960eb25b301bbb2
 EBUILD swi-prolog-6.2.6.ebuild 3104 SHA256 f79ebb35b16871ccc04f01a28a8f4fd7315ce925b99348ef87a470635d243da5 SHA512 d731b872f27f2e4e85bedd082f05c37d7f9c0e06d4af83694740ac172894dae265c2f3663065f9e98765a05af8805e1a3db9605dc5db14aa3ccdafdc127df2fd WHIRLPOOL e257f6e9eba40438fa7eb7ba268ce22329d96a2087cf176d724ab421cdf6d9ad1f40f1fb679166c96394884655639ccc95c4ff0d141d6f71110c2b7991051537
 EBUILD swi-prolog-6.4.0.ebuild 2864 SHA256 28cfb82408bc474a0fb69140f86b1b80240963ad14926bc763d7f178789d3146 SHA512 dcd304ffb9523efa3b719b19095e24c8bf845b353a766ed845369e89b3d502fb4929ab5e72a80f4011d3912a287549b763a55038d58ad1eed8d398f7da7f9b5b WHIRLPOOL 55b56f37f72f9d34b6caa8dab67c21df2b6234b0253f83143824827eccf446f7de8708989f4b6110b9d174ede60351866627cefbc71aa413615930e9837fb000
 EBUILD swi-prolog-6.4.1.ebuild 2865 SHA256 f666ebc6fcbd43811cb45cd2eb4e4929114edbd3f3cc25f1ef103768c797b04a SHA512 81c7ebc73000466c39c2c3d8cc50df16da99ee0a8619f176bf216ef484b71e46b65037404c56a39611356872945809c18c2e4a6224ad21f04ecdda0d0c437811 WHIRLPOOL 4d180b3a4aa24bb6cf348704f652e66ddfb649783d9fb481d02d9b7cf5b30387598557e591af96616ae3f9288a94ccc201b673bc1dfca1953cc12bf7c28fea20
@@ -25,12 +27,13 @@ EBUILD swi-prolog-6.6.0.ebuild 2864 SHA256 f18d939a869f21a2f226434a51a9de4f23fb9
 EBUILD swi-prolog-6.6.1.ebuild 2906 SHA256 63d81a0a255212dfc7e2fe158a4479d642ffd283d2a1e1defb99fbf808b3496f SHA512 8509f0ef1ea1bdec03359e7c103b3aee9f7d7974cda19fa5a2188302809dd0d4341e8692518d62bd1c7ba4cd627e5c723ab9595aa3aba59e64c6232822bac8bb WHIRLPOOL 742aae2b71ddd2b9e78263720c3ea12e7180201bcd5be96ddec9c8cff5af15ca65b7fe0c1ff536361aef655761c6a187df87dcba270821859347fb8c1b4e1661
 EBUILD swi-prolog-7.1.2.ebuild 2905 SHA256 960e432bd41088a5fd4227e757857f1ed732635ee22fa697961aebb08f979586 SHA512 c1fc7882b3d825a8dae07b7bf4d5e9e82870fbed525be7f0b28f1cf4f755455cf6296a5a3fd563cd7e13e536e4f17156062d5d4996b21d57a9c4aa10b248b38f WHIRLPOOL 3537924e61e2ea11a3586e331c8323fa85a13adca3df1420cd83f11f9e005c1add2bf512e9dea62e813278908677d960122ed38a685e2365bbf8ec6c1e30a928
 EBUILD swi-prolog-7.1.3.ebuild 2905 SHA256 f519fa9f709cfe7af32b3f03d615be1b1f3ea81a4e31203bcf6e1b190317053c SHA512 3b6fd1fd19a71aa01dc8f16a3a52c1756e17b466e8cb0c71162c253d9251a8c947b1b1d817d6b8d839585b8565e60baaad5aa7e36e416c905df6250e7876a19d WHIRLPOOL 3c54cc768bfef90dba5921cd00e86ff055aa7e813849ac657be53a6337be875176c5b7cf7c7dc4c6b1a923548845f66bea9bb31938fe157dcf9a9f1610425f9b
-MISC ChangeLog 61068 SHA256 120e06473f7b8555da99d23d143d0cd86839192f37ef3ed988e9719aa2adffe5 SHA512 caafcbd9aff78c6b2b169c3cb6484527ff0b3c2175d4679d800389a3c27603e1dc58be2a253733092d894b6340b5532bbae4b352c7d29c0997880e5f0b9b042d WHIRLPOOL 1616d679d0799069ddf26ea1e501ad750f82f561add5562ad575d8ea7052bae96817650a995bc45cf4dde610ea13859256db1816fa62867dcd1c52bb9f91ad34
+EBUILD swi-prolog-7.1.4.ebuild 2905 SHA256 2d1ca4d916f1c20b187f780aa683c2480891ad49e63240494025a10c9127ddc3 SHA512 1768f94da8158b5ef5d0d79e99ba822ea0a573523877ec7a545bb0a7fa9fed4fed0f576427d7f2229c9040e65b5dcbe4c0a3abb85dfc5c98253ee95c7eff4a79 WHIRLPOOL c2f2f7c1de4833fb29f665b208567e16416d86637881894c9c53d29af421592eec38598f7e6e4493eb0d96edd5290d92cf996f2d1a6ebb93a6ba5ee0caa3d5ee
+MISC ChangeLog 61193 SHA256 75d856a27aae315e10250221034c52c474b3abbca4fb12a3308690867533c122 SHA512 cc3c4b3061ac1d420d3ceaab7ed1ee011006651f090ebe07ddd87bebf3da3b1144fd4ec98c70d953c063fe1369d90c9a1b38f93f215800d3cb3482eb22e1f952 WHIRLPOOL 638de5136d64f9bf7abec90c318b30bed9db4f36872233ebac72fe90b7822ee54404009ea615f80dec372755803492f5cf916b3fea4ca25740fb2bc278feae85
 MISC metadata.xml 236 SHA256 cfc0f56c64161129f17e853433bcc92a212ae64ffe70f627ae6e24fd8cc3520a SHA512 c542f8fdc8c524ba187f02788407dd31a87a37255166c6ef184409e1469288736420df4dd39f42bf57bf367532ba9607484a6228790f5e71c1ca7bfb56525194 WHIRLPOOL 472c63b815161c5e04903d12cc2b5f8d7edf56ebdbd5407581534f728b95dc063cdcf227579f75c7ff819d29bb2ba02ee3b79480f46d60aa4de17199163e1242
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKvGZoACgkQrwS/tqE49e2geACeMK2cTqVUS0MfnjtDVmp7AoxY
-Tv0Ani6RqwZXa7e5rsUK6MoEv95qow3p
-=R00K
+iEYEAREIAAYFAlK0I28ACgkQrwS/tqE49e0tUQCaAzbLBSeYqw2lgehM7TsrT9d8
+XLwAn2H+25ClBCqJ8QgHvE0ekw3NgsCF
+=qC6N
 -----END PGP SIGNATURE-----
