@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.411 2013/12/16 15:17:56 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.412 2013/12/20 11:01:13 keri Exp $
+
+*swi-prolog-7.1.4 (20 Dec 2013)
+
+  20 Dec 2013; <keri@gentoo.org> +swi-prolog-7.1.4.ebuild:
+  Bump -7.1 development version
 
   16 Dec 2013; <keri@gentoo.org> -swi-prolog-7.1.0.ebuild,
   -swi-prolog-7.1.1.ebuild:
